# krius-ide

./: .gitignore  CMakeLists.txt  DEPLOYMENT_INSTRUCTIONS.md  FINAL_STATUS.md  GITHUB_SETUP_INSTRUCTIONS.md  PROJECT_STATUS.md  QUICK_SETUP.md  README.md  bagel_api_server.py  start_krius_ide.sh  test_bagel_integration.py
resources/: resources.qrc
src/: main.cpp  mainwindow.cpp  mainwindow.h  mainwindow_old.cpp  mainwindow_old.h
src/bagel/: bagelchatwidget.cpp  bagelchatwidget.h  bagelclient.cpp  bagelclient.h
src/editor/: codeeditor.cpp  codeeditor.h  syntaxhighlighter.cpp  syntaxhighlighter.h
src/project/: projectmanager.cpp  projectmanager.h
src/ui/: sidebar.cpp  sidebar.h  statusbar.cpp  statusbar.h
